--- a/Gamified Habit Tracker Blazor.Client/Pages/Achievements.razor
+++ b/Gamified Habit Tracker Blazor.Client/Pages/Achievements.razor
@@ -4,6 +4,7 @@
 @rendermode @(new InteractiveWebAssemblyRenderMode(prerender:false))
 @inject AuthenticationStateProvider _authState
 
+
 <PageTitle>Achievements</PageTitle>
 
 <div class="achievement-page">
@@ -51,7 +52,7 @@
 	{
 		userid = ((CustomAuthProvider)_authState).GetUserID();
 		
-		_achievements = await _achievementService.GetAllAchievement(userid);
+		_achievements = await _achievementService.GetAllAchievement(userid) ?? new();
 		await base.OnInitializedAsync();
 	}
 
