--- a/Gamified Habit Tracker Blazor/Components/Layout/MainLayout.razor
+++ b/Gamified Habit Tracker Blazor/Components/Layout/MainLayout.razor
@@ -1,6 +1,20 @@
 ﻿@inherits LayoutComponentBase
+@inject NavigationManager Nav
+@inject AuthenticationStateProvider _authState
 
 <div class="page">
+    @if (!isLoginPage())
+    {
+        <div class="nav-bar">
+            <ul class="nav-list">
+                <li><a href="achievements">Achievements</a></li>
+                <li><a href="habits">Habits</a></li>
+                <li><a href="profile">Profile</a></li>
+                <li><a href="Login">Logout</a></li>
+
+            </ul>
+        </div>
+    }
     
 
     <main>
@@ -16,3 +30,20 @@
     <a href="" class="reload">Reload</a>
     <a class="dismiss">🗙</a>
 </div>
+
+@code{
+
+    public bool isLoginPage()
+    {
+        var currentUri = Nav.Uri.ToLower();
+        return currentUri.Contains("/login");
+    }
+    
+    public async void Logout()
+    {
+        ((CustomAuthProvider)_authState).MarkUserAsLoggedOut();
+        Nav.NavigateTo("Login");
+        await Task.CompletedTask;
+    }
+
+}
