--- a/Gamified Habit Tracker Blazor/Components/Layout/MainLayout.razor
+++ b/Gamified Habit Tracker Blazor/Components/Layout/MainLayout.razor
@@ -10,6 +10,7 @@
                 <li><a href="achievements">Achievements</a></li>
                 <li><a href="habits">Habits</a></li>
                 <li><a href="profile">Profile</a></li>
+                <li><a href="Experience">Experience</a></li>
                 <li><a href="Login">Logout</a></li>
 
             </ul>
