--- a/Gamified Habit Tracker Blazor.Client/Pages/Habits.razor
+++ b/Gamified Habit Tracker Blazor.Client/Pages/Habits.razor
@@ -9,9 +9,9 @@
 <div class="Habits-page">
 	<h1 style="margin-top : 100px">Habits</h1>
 
-	<HabitDropdown UpdateHabits="RefreshHabits" Title="Daily Habits  ▼" Habits="_NotCompletedHabits" Completed="false"></HabitDropdown>
+	<HabitDropdown user_id ="user_id" UpdateHabits="RefreshHabits" Title="Daily Habits  ▼" Habits="_NotCompletedHabits" Completed="false"></HabitDropdown>
 	<br /><br /><br /><br />
-	<HabitDropdown UpdateHabits="RefreshHabits" Title="Completed habits  ▼" Habits="_CompletedHabits" Completed="true"></HabitDropdown>
+	<HabitDropdown user_id="user_id" UpdateHabits="RefreshHabits" Title="Completed habits  ▼" Habits="_CompletedHabits" Completed="true"></HabitDropdown>
 
 	<h3>
 		Current Streak :   @Streak    🔥
