fixed a bug & added progress bar in profile page

--- a/Gamified Habit Tracker Blazor.Client/Pages/Achievements.razor
+++ b/Gamified Habit Tracker Blazor.Client/Pages/Achievements.razor
@@ -3,7 +3,7 @@
 @inject AchievementService _achievementService
 @rendermode @(new InteractiveWebAssemblyRenderMode(prerender:false))
 @inject AuthenticationStateProvider _authState
-
+@layout Layout.DefNotTheMainLayout
 
 <PageTitle>Achievements</PageTitle>
 
