--- a/Gamified Habit Tracker Blazor.Client/Pages/HabitDropdown.razor
+++ b/Gamified Habit Tracker Blazor.Client/Pages/HabitDropdown.razor
@@ -2,6 +2,7 @@
 @inject HabitService _habitService
 @inject ExperienceService _experienceService
 @inject LevelService _levelService
+@inject AchievementService _achService
 
 <div class="dropdown">
     <label for="@($"{Title}dropdownToggle")" class="dropdown-btn">@Title</label>
@@ -102,6 +103,7 @@
     public async Task CompleteHabit(int id)
     {
         await _habitService.CompleteHabit(id);
+        await UpdateAchievements();
         await _experienceService.AddExperiences(id);
         await _levelService.CheckLevelUp(user_id);
         var habitToComplete = Habits?.FirstOrDefault(h => h.HabitID == id);
@@ -115,6 +117,18 @@
         StateHasChanged();
 
     }
+    public async Task UpdateAchievements()
+	{
+		var checks = await _achService.CheckAllAchievements(user_id);
+		for (int i = 0; i < checks.Count; i++)
+		{
+			if (checks[i])
+			{
+				await _achService.CompleteAchievement(i+1, user_id);
+			}
+
+		}
+	}
     public void OnUpdateHabit()
     {
         UpdateHabits.InvokeAsync();
