--- a/Gamified Habit Tracker Blazor.Client/Pages/Profile.razor.css
+++ b/Gamified Habit Tracker Blazor.Client/Pages/Profile.razor.css
@@ -16,6 +16,18 @@
 .text {
     margin-left : 14%;
     margin-top : 3%;
+    padding : 10px;
+}
+.progress-bar{
+    background-color : white;
+    border : 2px solid black;
+    box-shadow : black -1px 1px;
+    border-radius : 25px 0px;
+    width : 500px;
+}
+.progress {
+    background-color: lawngreen;
+    border-radius: 25px 0px;
 }
 .golden{
     color :  gold;
