--- a/Gamified Habit Tracker Blazor.Client/Pages/Achievements.razor
+++ b/Gamified Habit Tracker Blazor.Client/Pages/Achievements.razor
@@ -8,7 +8,7 @@
 <PageTitle>Achievements</PageTitle>
 
 <div class="achievement-page">
-	<h1>Achievements</h1>
+	<h1 style="margin-top : 80px;">Achievements</h1>
 	<div class="Achievements-container">
 		@foreach (var ach in _achievements)
 		{
