--- a/Gamified Habit Tracker Blazor.Client/Pages/Habits.razor
+++ b/Gamified Habit Tracker Blazor.Client/Pages/Habits.razor
@@ -5,6 +5,8 @@
 @inject NavigationManager nav
 @inject AuthenticationStateProvider _authState
 
+@layout Layout.DefNotTheMainLayout
+
 <PageTitle>Habits</PageTitle>
 
 <div class="Habits-page">
