--- a/Gamified Habit Tracker Blazor.Client/Pages/LoginPage.razor
+++ b/Gamified Habit Tracker Blazor.Client/Pages/LoginPage.razor
@@ -1,5 +1,6 @@
 ﻿@rendermode @(new InteractiveWebAssemblyRenderMode(prerender:false))
 @page "/Login"
+@layout Layout.DefNotTheMainLayout
 
 <PageTitle>Login</PageTitle>
 <div class="img-background">
