--- a/Gamified Habit Tracker Blazor.Client/Pages/Profile.razor
+++ b/Gamified Habit Tracker Blazor.Client/Pages/Profile.razor
@@ -4,6 +4,7 @@
 @inject HabitService _habitService
 @inject AchievementService _achService
 @rendermode @(new InteractiveWebAssemblyRenderMode(prerender:false))
+@layout Layout.DefNotTheMainLayout
 
 @page "/profile"
 <div class="profile-page">
