--- a/Gamified Habit Tracker Blazor.Client/_Imports.razor
+++ b/Gamified Habit Tracker Blazor.Client/_Imports.razor
@@ -11,3 +11,4 @@
 @using GamifiedHabitTracker.Models
 @using Microsoft.AspNetCore.Components.WebAssembly.Authentication
 @using Microsoft.AspNetCore.Components.Authorization
+@using Gamified_Habit_Tracker_Blazor.Client.Pages
